# GTA-OCR-BusinessManager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  install.bat  pyproject.toml  requirements.txt  run-console.bat  run-debug.bat  run.bat  test_capture.py  uninstall.bat
.claude/: settings.local.json
assets/templates/: .gitkeep
src/: __init__.py  app.py  constants.py  hotkeys.py  main.py
src/audio/: __init__.py  notifier.py
src/capture/: __init__.py  regions.py  resolution.py  screen_capture.py
src/config/: __init__.py  defaults.py  settings.py
src/database/: __init__.py  models.py  repository.py
src/detection/: __init__.py  ocr_engine.py  state_detector.py  template_matcher.py
src/detection/parsers/: __init__.py  business_parser.py  mission_parser.py  money_parser.py  timer_parser.py
src/game/: __init__.py  activities.py  businesses.py  missions.py  payouts.py  state_machine.py  weekly_bonuses.py
src/optimization/: __init__.py  optimizer.py  priorities.py  scheduler.py  sell_planner.py
src/tracking/: __init__.py  activity_tracker.py  analytics.py  cooldowns.py  earnings_rate.py  goals.py  history.py  nightclub.py  passive_income.py  session.py
src/ui/: __init__.py  main_window.py  overlay.py  system_tray.py
src/ui/styles/: __init__.py  dark_theme.py
src/ui/widgets/: __init__.py  activity_panel.py  bonus_panel.py  (+11 more)
src/utils/: __init__.py  exporter.py  helpers.py  logging.py  performance.py
tests/: __init__.py  conftest.py  test_cooldowns.py  test_database.py  test_earnings_rate.py  test_exporter.py  test_goals.py  test_parsers.py  test_passive_income.py  test_settings.py  test_tracking.py
